Fix cropped settings heading with a dynamic viewport height

--- a/web/src/pages/Settings/Settings.scss
+++ b/web/src/pages/Settings/Settings.scss
@@ -39,7 +39,7 @@
 
 .settings-page-container {
   background-color: general.$bg;
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
 }
 
